[package]
name = "quartz_commands_macros"
version = "0.1.0"
edition = "2018"

description = "This crate contains the function-like procedural macro which parses quartz_commands's custom syntax."
repository = "https://github.com/Rusty-Quartz/quartz_commands"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full"] }
proc-macro2 = "1.0"
quote = "1.0"
once_cell = "1.8"
